# mcp_server_titanic

./: README.md  main.py  pyproject.toml
src/mcpserver/: __main__.py  titanic.py
